======= 3.4.2

- added: `HASH(value, [type])` for creating hash like in jComponent
- added: `SchemaOptions.repo` as alias to `SchemaInstance.model.$$repository`
- added: a new type `CONVERT syntax` to `schema.define()` (more in docs)

- updated: `websocket.send2(message, comparer, replacer, [params])` by adding `params` argument for comparer function
- updated: bundling skips all bundles with `-bk.bundle` in filename
- updated: bundle filenames are displayed in console
- updated: `UPDATE()` method by adding `noarchive` argument
- updated: `TEST()` method supports `[subdomain]` keyword and `METHOD url` in URL address
- updated: `MODIFY([filename], fn)` by adding `filename` argument
- updated: background of schedulers by @fgnm
- updated: `U.download()` by adding `param` argument
- updated: `U.request()` by adding `param` argument

- improved: `filename` in modificators (now it contains relative paths)
- improved: performance of `U.request()` (around +30%)
- improved: performance of `U.download()` (around +30%)
- improved: performance of `RESTBuilder`
- improved: CSS minifier by compressing single hex color from e.g. `#000000` to `#000`

- fixed: localization in `totaljs` executable script
- fixed: phone validation
- fixed: `DOWNLOAD()`
- fixed: `Number.VAT()` by Tomas Novak

======= 3.4.1

- added: `SchemaOptions.parent` returns a parent model
- added: Tangular template engine (experimental)
- added: `String.makeid()` for creating of unique identifier from string
- added: a new property called `message.ua` to `FLOWSTREAM()`

- updated: `HttpFile.fs()` by adding `id` argument for updating of existing file
- updated: default value for `allow_ssc_validation` to `true`

- fixed: `String.parseDate(format)` with defined format
- fixed: inheriting of controllers between schemas
- fixed: `MailMessage.attachments()`
- fixed: calling of `F.snapshotstats` in cache recycle
- fixed: `controller.success()`
- fixed: removing of unused files when a bundle is extracting